--- a/app/src/main/res/layout/payment_list_custom_adapter.xml
+++ b/app/src/main/res/layout/payment_list_custom_adapter.xml
@@ -31,6 +31,7 @@
                 android:background="@drawable/custom_text_view_status"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentLeft="true"
+                android:drawableStart="@drawable/eye"
                 android:layout_marginTop="16dp"
                 android:textColor="#FFF"
                 android:gravity="center"
