--- a/app/src/main/res/layout/fragment_add_real_state.xml
+++ b/app/src/main/res/layout/fragment_add_real_state.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragments.AddRealStateFragment" >
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".Fragments.AddRealStateFragment">
 
 
 
@@ -270,6 +271,22 @@
                 />
 
         </LinearLayout>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="10dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
+            >
+            <com.google.android.gms.maps.MapView
+                android:id="@+id/mapView"
+                android:layout_width="match_parent"
+                android:layout_height="180dp"
+                android:visibility="gone"
+                />
+        </androidx.cardview.widget.CardView>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="60dp"
