--- a/app/src/main/res/layout/payment_list_custom_adapter.xml
+++ b/app/src/main/res/layout/payment_list_custom_adapter.xml
@@ -17,6 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="140dp"
             android:padding="8dp"
+            android:visibility="gone"
             >
             <ImageView
                 android:layout_width="match_parent"
@@ -75,6 +76,7 @@
                     android:text="ريال"
                     android:layout_marginBottom="8dp"
                     android:maxLines="2"
+                    android:visibility="gone"
                     />
                 <TextView
                     android:id="@+id/descriptionOforder"
@@ -95,12 +97,24 @@
                     android:textColor="#000"
                     android:textSize="16sp"
                     android:textDirection="rtl"
-                    android:text="المبلغ:"
+                    android:text="التكلفة:"
                     android:layout_marginBottom="8dp"
                     android:maxLines="2"
                     />
             </LinearLayout>
         </RelativeLayout>
+
+
+        <TextView
+            android:id="@+id/lblPaymentDescription"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="#000"
+            android:textSize="20sp"
+            android:text=""
+            android:textDirection="rtl"
+            android:maxLength="15"
+            />
 
         <!--        <LinearLayout-->
         <!--            android:layout_width="match_parent"-->
