--- a/app/src/main/res/layout/fragment_send_rate_display.xml
+++ b/app/src/main/res/layout/fragment_send_rate_display.xml
@@ -314,6 +314,16 @@
 
             </RelativeLayout>
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="12sp"
+                android:textDirection="rtl"
+                android:textColor="#585858"
+                android:text="@string/send_offer_note"
+                android:layout_marginTop="16dp"
+                />
+
             <androidx.appcompat.widget.AppCompatButton
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
