--- a/app/src/main/res/layout/activity_compnay_user_register.xml
+++ b/app/src/main/res/layout/activity_compnay_user_register.xml
@@ -359,6 +359,41 @@
                         android:background="#00000000" />
                 </LinearLayout>
             </LinearLayout>
+
+
+            <TextView
+                android:id="@+id/lblcompany_info"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="12sp"
+                android:textDirection="rtl"
+                android:textColor="#585858"
+                android:text="@string/company_info"
+                android:layout_marginTop="16dp"
+
+                />
+            <LinearLayout
+                android:id="@+id/notes_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:background="@drawable/custom_edittext_field"
+                >
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="75dp"
+                    android:textSize="14sp"
+                    android:textDirection="rtl"
+                    android:textColor="#313131"
+                    android:hint="@string/company_info"
+                    android:id="@+id/addnotestxt"
+                    android:layout_margin="8dp"
+                    android:backgroundTint="#00000000"
+                    android:gravity="top"
+                    />
+
+            </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
