--- a/app/src/main/res/layout/comments_layout.xml
+++ b/app/src/main/res/layout/comments_layout.xml
@@ -12,7 +12,6 @@
         android:layout_height="30dp"
         android:elevation="12dp"
         android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
         android:id="@+id/companyViewRight"
         android:innerRadius="0dp"
         android:shape="ring"
@@ -32,24 +31,20 @@
             />
     </androidx.cardview.widget.CardView>
 
-    <androidx.cardview.widget.CardView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
         android:layout_centerVertical="true"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:layout_toLeftOf="@id/companyViewRight"
-        android:layout_toRightOf="@id/companyViewLeft"
-        card_view:cardBackgroundColor="@color/cardViewBackgroundColor"
-        card_view:cardCornerRadius="5dp"
-        card_view:cardUseCompatPadding="true"
-
-        >
+        android:layout_toRightOf="@id/companyViewLeft" >
 
         <TextView
-            android:id="@+id/commentText"
+            android:id="@+id/senderText"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="8dp"
@@ -57,13 +52,47 @@
             android:textColor="#303030"
             android:textDirection="rtl"
             android:textSize="16dp" />
-    </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            card_view:cardBackgroundColor="@color/cardViewBackgroundColor"
+            card_view:cardCornerRadius="5dp"
+            card_view:cardUseCompatPadding="true"
+            >
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical" >
+
+                <TextView
+                    android:id="@+id/commentText"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="8dp"
+                    android:maxLength="400"
+                    android:textColor="#303030"
+                    android:textDirection="rtl"
+                    android:textSize="16dp" />
+
+                <ImageView
+                    android:id="@+id/iv_image"
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"
+                    android:layout_margin="8dp" />
+
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+
+    </LinearLayout>
+
     <androidx.cardview.widget.CardView
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:elevation="12dp"
         android:layout_alignParentLeft="true"
-        android:layout_centerVertical="true"
         android:id="@+id/companyViewLeft"
         android:innerRadius="0dp"
         android:shape="ring"
