--- a/app/src/main/res/layout/fragment_previewer_comments.xml
+++ b/app/src/main/res/layout/fragment_previewer_comments.xml
@@ -79,11 +79,22 @@
                 android:layout_height="wrap_content"
                 android:layout_toLeftOf="@id/sendBtn"
                 android:id="@+id/addComment"
+                android:layout_toRightOf="@+id/sendFile"
                 android:layout_centerVertical="true"
                 android:textDirection="rtl"
                 android:backgroundTint="#00000000"
                 />
 
+            <ImageButton
+                android:id="@+id/sendFile"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_send"
+                android:padding="4dp"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:background="#00000000"
+                />
         </RelativeLayout>
 
 
