--- a/app/src/main/res/layout/fragment_previewer_balance.xml
+++ b/app/src/main/res/layout/fragment_previewer_balance.xml
@@ -135,6 +135,17 @@
                android:layout_marginTop="32dp"
                />
 
+           <androidx.appcompat.widget.AppCompatButton
+               android:id="@+id/previousTransactionsBtn"
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:background="@drawable/custom_end_orders_btn"
+               android:textColor="#FFF"
+               android:text="@string/previous_transactions"
+               android:layout_marginBottom="16dp"
+               android:layout_below="@id/endOrderBtn"
+               />
+
        </RelativeLayout>
 
     </ScrollView>
