--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -96,6 +96,7 @@
                             android:layout_height="match_parent"
                             android:padding="8dp"
                             android:textSize="16sp"
+                            android:maxLines="1"
                             android:gravity="center_vertical"
                             android:background="#00000000" />
                     </LinearLayout>
