--- a/app/src/main/res/layout/payment_list_custom_adapter.xml
+++ b/app/src/main/res/layout/payment_list_custom_adapter.xml
@@ -11,7 +11,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical" >
+        android:orientation="vertical"
+        android:padding="8dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -113,7 +114,6 @@
             android:textSize="20sp"
             android:text=""
             android:textDirection="rtl"
-            android:maxLength="15"
             />
 
         <!--        <LinearLayout-->
