--- a/app/src/main/res/layout/fragment_edit_previewer_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_previewer_profile.xml
@@ -59,6 +59,39 @@
         >
 
 
+        <!-- Star and label container -->
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:layout_alignParentTop="true"
+
+            android:padding="8dp"
+            android:background="#80000000">
+
+            <!-- Star ImageView -->
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_star"
+                android:layout_marginEnd="4dp"
+                />
+
+            <!-- Star value TextView -->
+            <TextView
+                android:id="@+id/lbl_rate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="4.5"
+                android:textColor="@android:color/white"
+                android:textSize="16sp"
+                android:layout_gravity="center"
+                />
+
+        </LinearLayout>
+
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
