--- a/app/src/main/res/layout/menu_left_drawer.xml
+++ b/app/src/main/res/layout/menu_left_drawer.xml
@@ -224,6 +224,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/aboutUsRel"
+            android:layout_marginBottom="16dp"
             >
             <ImageView
                 android:layout_width="wrap_content"
@@ -239,6 +240,32 @@
                 android:text="@string/aboutApp"
                 android:layout_toRightOf="@id/aboutApp"
                 android:layout_marginLeft="8dp"
+                android:layout_centerVertical="true"
+                android:textColor="#FFF"
+                />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:id="@+id/companyVipRel"
+            >
+            <ImageView
+                android:id="@+id/vip_company"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/star_icon"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/vip_company"
+                android:layout_toRightOf="@id/vip_company"
+                android:layout_marginLeft="8dp"
+                android:id="@+id/vipText"
                 android:layout_centerVertical="true"
                 android:textColor="#FFF"
                 />
