--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#494137</color>
-    <color name="teal_200">#9A7232</color>
-    <color name="teal_700">#FF018786</color>
+    <color name="purple_200">#52346B</color>
+    <color name="purple_700">#332A39</color>
+    <color name="teal_200">#52346B</color>
+    <color name="teal_700">#876AA4</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="F1F4FC">#F1F4FC</color>
 
     <color name="cardViewBackgroundColor">#ECECEC</color>
-    <color name="refusedBackgroundColor">#CE3B48</color>
-    <color name="acceptedBackgroundColor">#1ED58E</color>
-    <color name="red">#CE3B48</color>
+    <color name="refusedBackgroundColor">#CE3A47</color>
+    <color name="acceptedBackgroundColor">#1ED48E</color>
+    <color name="red">#CE3A47</color>
     <color name="color_background_box">#F5F5F5</color>
     <color name="color_background_box_stroke">#DEDEDE</color>
     <color name="color_background_box_stroke_active">#A5A5A5</color>
