show hide password

--- a/app/src/main/res/layout/activity_client_user.xml
+++ b/app/src/main/res/layout/activity_client_user.xml
@@ -329,13 +329,23 @@
 
                     <EditText
                         android:id="@+id/passwordEditText"
-                        android:layout_width="match_parent"
+                        android:layout_width="0dp"
                         android:layout_height="match_parent"
+                        android:layout_weight="1"
                         android:padding="8dp"
                         android:textSize="16sp"
                         android:inputType="textPassword"
                         android:gravity="center_vertical"
                         android:background="#00000000" />
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/fi_sr_eye_crossed"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginStart="12dp"
+                        android:clickable="true"
+                        android:onClick="showHidePassword"/>
                 </LinearLayout>
             </LinearLayout>
 
@@ -374,13 +384,23 @@
 
                     <EditText
                         android:id="@+id/confirmPasswordEditText"
-                        android:layout_width="match_parent"
+                        android:layout_width="0dp"
                         android:layout_height="match_parent"
+                        android:layout_weight="1"
                         android:padding="8dp"
                         android:textSize="16sp"
                         android:inputType="textPassword"
                         android:gravity="center_vertical"
                         android:background="#00000000" />
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/fi_sr_eye_crossed"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginStart="12dp"
+                        android:clickable="true"
+                        android:onClick="showHideConfirmPassword"/>
                 </LinearLayout>
             </LinearLayout>
 
