--- a/app/src/main/res/layout/fragment_add_artist_or_cheaker.xml
+++ b/app/src/main/res/layout/fragment_add_artist_or_cheaker.xml
@@ -219,16 +219,11 @@
                         android:layout_height="match_parent"
                         android:background="#DDD"
                         />
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:padding="8dp"
-                        android:gravity="center_vertical"
-                        >
                         <EditText
                             android:id="@+id/EditProfilePasswordEditText"
-                            android:layout_width="match_parent"
+                            android:layout_width="0dp"
                             android:layout_height="match_parent"
+                            android:layout_weight="1"
                             android:inputType="textPassword"
                             android:padding="8dp"
                             android:layout_marginLeft="32dp"
@@ -236,16 +231,14 @@
                             android:background="#00000000"
                             android:textDirection="rtl"
                             />
-                        <ImageButton
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentLeft="true"
-                            android:layout_centerVertical="true"
-                            android:src="@drawable/fi_sr_eye_crossed"
-                            android:background="#00000000"
-                            />
-                    </RelativeLayout>
-
+                    <ImageView
+                        android:id="@+id/showHidePassword"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/fi_sr_eye_crossed"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginStart="12dp"
+                        android:clickable="true"/>
 
                 </LinearLayout>
             </LinearLayout>
