--- a/app/src/main/res/layout/fragment_add_artist_or_cheaker.xml
+++ b/app/src/main/res/layout/fragment_add_artist_or_cheaker.xml
@@ -287,7 +287,7 @@
                     android:background="@drawable/custom_sign_up_btn"
                     android:id="@+id/confirm"
                     android:textColor="#FFF"
-                    android:text="@string/add"
+                    android:text="@string/save"
                     android:layout_marginTop="24dp"
                     android:layout_marginBottom="84dp"
                     />
