--- a/app/src/main/res/layout/fragment_add_cheaker.xml
+++ b/app/src/main/res/layout/fragment_add_cheaker.xml
@@ -287,7 +287,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/custom_sign_up_btn"
-                    android:id="@+id/confirm"
+                    android:id="@+id/save"
                     android:textColor="#FFF"
                     android:text="@string/add"
                     android:layout_marginTop="24dp"
