--- a/app/src/main/res/layout/custom_previewer_business_in_progress.xml
+++ b/app/src/main/res/layout/custom_previewer_business_in_progress.xml
@@ -27,7 +27,7 @@
                 android:id="@+id/image"
                 />
             <TextView
-                android:layout_width="70dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/custom_text_view_status"
                 android:layout_alignParentTop="true"
@@ -73,7 +73,7 @@
                     android:textSize="20sp"
                     android:text="@string/name"
                     android:layout_marginBottom="8dp"
-                    android:textDirection="rtl"
+
                     />
                 <TextView
                     android:id="@+id/descriptionOforder"
@@ -81,7 +81,7 @@
                     android:layout_height="wrap_content"
                     android:textColor="#000"
                     android:textSize="16sp"
-                    android:textDirection="rtl"
+
                     android:text="@string/description"
                     android:maxLines="2"
                     />
@@ -147,7 +147,7 @@
             android:layout_marginBottom="8dp"
             android:text="@string/contactData"
             android:textColor="#000"
-            android:textDirection="rtl"
+
             />
 
         <LinearLayout
