--- a/app/src/main/res/layout/fragment_employee_profile.xml
+++ b/app/src/main/res/layout/fragment_employee_profile.xml
@@ -45,6 +45,17 @@
                 android:layout_marginRight="16dp"
                 />
 
+            <ImageView
+                android:id="@+id/changeLanguage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="20dp"
+                android:layout_margin="16dp"
+                android:background="@drawable/world"
+                android:clickable="true"
+                android:focusable="true"/>
 
         </RelativeLayout>
 
@@ -83,7 +94,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/name"
-                        android:gravity="right"
+
                         android:layout_marginTop="8dp"
                         android:layout_marginBottom="8dp"
                         />
@@ -126,7 +137,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/client_company_email"
-                        android:gravity="right"
+
                         android:layout_marginTop="8dp"
                         android:layout_marginBottom="8dp"
                         />
@@ -169,7 +180,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/client_company_phone"
-                        android:gravity="right"
+
                         android:layout_marginTop="8dp"
                         android:layout_marginBottom="8dp"
                         />
@@ -214,7 +225,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/password"
-                        android:gravity="right"
+
                         android:layout_marginTop="8dp"
                         android:layout_marginBottom="8dp"
                         />
@@ -245,7 +256,7 @@
                                 android:padding="8dp"
                                 android:textSize="16sp"
                                 android:background="#00000000"
-                                android:textDirection="rtl"
+
                                 />
 
                         <ImageView
