--- a/app/src/main/res/layout/fragment_show_previewer_profile.xml
+++ b/app/src/main/res/layout/fragment_show_previewer_profile.xml
@@ -39,6 +39,19 @@
             android:background="#00000000"
             android:layout_marginRight="20dp"
             />
+
+        <ImageView
+            android:id="@+id/changeLanguage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="20dp"
+            android:layout_margin="16dp"
+            android:background="@drawable/world"
+            android:clickable="true"
+            android:focusable="true"/>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -147,7 +160,7 @@
                         android:layout_height="wrap_content"
                         android:background="@drawable/custom_edittext_field"
                         android:textSize="14sp"
-                        android:textDirection="rtl"
+
                         android:textColor="#303030"
                         android:paddingRight="16dp"
                         android:paddingTop="8dp"
@@ -182,7 +195,7 @@
                         android:paddingRight="16dp"
                         android:paddingBottom="8dp"
                         android:textColor="#303030"
-                        android:textDirection="rtl"
+
                         android:textSize="14sp" />
                 </LinearLayout>
                 <LinearLayout
@@ -203,7 +216,7 @@
                         android:layout_height="wrap_content"
                         android:background="@drawable/custom_edittext_field"
                         android:textSize="14sp"
-                        android:textDirection="rtl"
+
                         android:textColor="#303030"
                         android:paddingRight="16dp"
                         android:paddingTop="8dp"
@@ -231,7 +244,7 @@
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
                         android:background="@drawable/custom_edittext_field"
-                        android:textDirection="rtl"
+
                         android:paddingRight="16dp"
                         android:paddingTop="8dp"
                         android:paddingBottom="8dp"
@@ -245,8 +258,8 @@
                             android:textSize="14sp"
                             android:textColor="#303030"
                             android:id="@+id/region1"
-                            android:textDirection="rtl"
-                            android:gravity="right"
+
+
                             />
 <!--                        <TextView-->
 <!--                            android:layout_width="0dp"-->
@@ -256,7 +269,7 @@
 <!--                            android:text="1213213"-->
 <!--                            android:textColor="#303030"-->
 <!--                            android:id="@+id/region2"-->
-<!--                            android:textDirection="rtl"-->
+<!--                            -->
 <!--                            android:gravity="center"-->
 <!--                            />-->
 <!--                        <TextView-->
@@ -267,7 +280,7 @@
 <!--                            android:text="1213213"-->
 <!--                            android:textColor="#303030"-->
 <!--                            android:id="@+id/region3"-->
-<!--                            android:textDirection="rtl"-->
+<!--                            -->
 <!--                            android:gravity="center"-->
 <!--                            />-->
                     </LinearLayout>
@@ -291,7 +304,7 @@
                         android:layout_height="wrap_content"
                         android:background="@drawable/custom_edittext_field"
                         android:textSize="14sp"
-                        android:textDirection="rtl"
+
                         android:textColor="#303030"
                         android:paddingRight="16dp"
                         android:paddingTop="8dp"
