--- a/app/src/main/res/layout/fragment_show_reviewer_profile.xml
+++ b/app/src/main/res/layout/fragment_show_reviewer_profile.xml
@@ -50,6 +50,18 @@
             android:layout_below="@id/ti"
             />
 
+        <ImageView
+            android:id="@+id/changeLanguage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="20dp"
+            android:layout_margin="16dp"
+            android:background="@drawable/world"
+            android:clickable="true"
+            android:focusable="true"/>
+
     </RelativeLayout>
 
     <ScrollView
@@ -114,7 +126,7 @@
                         android:layout_height="wrap_content"
                         android:background="@drawable/custom_edittext_field"
                         android:textSize="14sp"
-                        android:textDirection="rtl"
+
                         android:textColor="#303030"
                         android:paddingRight="16dp"
                         android:paddingTop="8dp"
@@ -142,7 +154,7 @@
                         android:layout_height="wrap_content"
                         android:background="@drawable/custom_edittext_field"
                         android:textSize="14sp"
-                        android:textDirection="rtl"
+
                         android:textColor="#303030"
                         android:paddingRight="16dp"
                         android:paddingTop="8dp"
